RESOLVED FIXED213246
Loads triggered by an opaque stylesheet should not be visible to service workers
https://bugs.webkit.org/show_bug.cgi?id=213246
Summary Loads triggered by an opaque stylesheet should not be visible to service workers
youenn fablet
Reported 2020-06-16 06:30:02 PDT
Loads triggered by an opaque stylesheet should not be visible to service workers
Attachments
Patch (8.88 KB, patch)
2020-06-16 07:12 PDT, youenn fablet
no flags
Patch (8.86 KB, patch)
2020-06-16 07:29 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-06-16 07:12:39 PDT
youenn fablet
Comment 2 2020-06-16 07:29:12 PDT
EWS
Comment 3 2020-06-16 10:18:08 PDT
Committed r263098: <https://trac.webkit.org/changeset/263098> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402002 [details].
Radar WebKit Bug Importer
Comment 4 2020-06-16 10:19:19 PDT
Note You need to log in before you can comment on or make changes to this bug.