Loads triggered by an opaque stylesheet should not be visible to service workers https://bugs.webkit.org/show_bug.cgi?id=213246

Reviewed by Alex Christensen.

Source/WebCore:

Test: http/wpt/service-workers/no-cors-css-with-subresources.https.html

* loader/ResourceLoaderOptions.h:
Move it to boolean

Source/WebKit:

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoadFromNetworkProcess):
In case the load is triggered from an opaque response, set service worker mode to none.

LayoutTests:

* http/wpt/service-workers/no-cors-css-with-subresources.https-expected.txt: Added.
* http/wpt/service-workers/no-cors-css-with-subresources.https.html: Added.
* http/wpt/service-workers/no-cors-css-worker.js: Added.
(async doTest):
(async doFetch):
* http/wpt/service-workers/resources/loading-subresources.css: Added.
* http/wpt/service-workers/resources/subresource.css: Added.
(div#resource_link_css):


Canonical link: https://commits.webkit.org/226035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263098 268f45cc-cd09-0410-ab3c-d52691b4dbfc