Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp
@@ -321,7 +321,7 @@ void WebLoaderStrategy::scheduleLoadFromNetworkProcess(ResourceLoader& resourceL
     addParametersShared(frame, loadParameters);
 
 #if ENABLE(SERVICE_WORKER)
-    loadParameters.serviceWorkersMode = resourceLoader.options().serviceWorkersMode;
+    loadParameters.serviceWorkersMode = resourceLoader.options().loadedFromOpaqueSource == LoadedFromOpaqueSource::No ? resourceLoader.options().serviceWorkersMode : ServiceWorkersMode::None;
     loadParameters.serviceWorkerRegistrationIdentifier = resourceLoader.options().serviceWorkerRegistrationIdentifier;
     loadParameters.httpHeadersToKeep = resourceLoader.options().httpHeadersToKeep;
 #endif
